welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:3: error: type mismatch;
 found   : Unit
 required: Boolean
    case (false, false) => return
                           ^sleepIn:4: error: type mismatch;
 found   : Unit
 required: Boolean
    case (true, false) => return
                          ^